--- a/app/vviews/admin/html/head.ejs
+++ b/app/vviews/admin/html/head.ejs
@@ -15,6 +15,7 @@
 <link rel="stylesheet" href="adminlte/css/overlayScrollbars/css/OverlayScrollbars.min.css">
 <!-- Theme style -->
 <link rel="stylesheet" href="adminlte/css/adminlte.min.css">
+<link rel="stylesheet" href="/plugins/toastr/toastr.css">
 <link rel="stylesheet" href="adminlte/css/custom.css">
 <script src="https://cdn.ckeditor.com/ckeditor5/35.1.0/classic/ckeditor.js"></script>
 <script src="https://unpkg.com/dropzone@6.0.0-beta.1/dist/dropzone-min.js"></script>
