--- a/app/vviews/admin/html/script.ejs
+++ b/app/vviews/admin/html/script.ejs
@@ -10,6 +10,7 @@
 <script src="adminlte/js/status.js"></script>
 <script src="adminlte/js/ajax.js"></script>
 <script src="adminlte/js/ntf.js"></script>
+<script src="/plugins/toastr/toastr.min.js"></script>
 <script src="https://adminlte.io/themes/v3/plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>
 <script>
   $(function () {
