--- a/app/vviews/admin/html/sidebar.ejs
+++ b/app/vviews/admin/html/sidebar.ejs
@@ -43,7 +43,7 @@
     let arrProductSettings = [
     {name: 'Danh Mục Sản Phẩm', icon: 'fa-window-restore', link: `${systemConfig.prefixAdmin}/categories`},
     {name: 'Sản Phẩm', icon: 'fas fa-shopping-cart', link: `${systemConfig.prefixAdmin}/products`},
-    {name: 'Sản Phẩm Giảm Giá', icon: 'fa-solid fa-percent', link: `${systemConfig.prefixAdmin}/discount`},
+    {name: 'Đơn Hàng', icon: 'fas fa-shopping-cart', link: `${systemConfig.prefixAdmin}/order`},
     {name: 'Mã Giảm Giá', icon: 'fas fa-ticket-alt', link: `${systemConfig.prefixAdmin}/Coupons`},
     ];
 
