--- a/app/vviews/admin/pages/coupons/list.ejs
+++ b/app/vviews/admin/pages/coupons/list.ejs
@@ -83,7 +83,7 @@
 							<%- sortField(linkPrefix,'Đã Dùng','used',sort) %>
 						</th>
 						<th class="text-center">Thời Gian</th>
-						<th class="text-center">Thời Gian</th>
+						<!-- <th class="text-center">Thời Gian</th> -->
 						<th class="text-center">Thao Tác</th>
 					</tr>
 				</thead>
@@ -116,9 +116,9 @@
 						<td class="text-center">
 							<input type="text" class="form-control float-right" id="reservation" name="dates" value="<%= item.dates ?? null %>" disabled>
 						</td>
-						<td class="text-center position-relative" id="discountstatus-item-<%= item.id %>">
-							<%- showDiscountStatus(item.dates) %>
-					  </td>
+						<!-- <td class="text-center position-relative" id="discountstatus-item-<%# item.id %>">
+							<%# showDiscountStatus(item.dates) %>
+						</td> -->
 						<td class="text-center">
 							<a href="<%= linkPrefix %>form/<%= item.id %>" class="rounded-circle btn btn-sm btn-info" title="Edit">
 								<i class="fas fa-pencil-alt"></i>
