--- a/app/vviews/ecommerce/pages/product/index.ejs
+++ b/app/vviews/ecommerce/pages/product/index.ejs
@@ -130,7 +130,7 @@
 								<!-- <p class="infolinks"><a href="#sizechart" class="sizelink btn"> Size Guide</a> <a href="#productInquiry" class="emaillink btn"> Ask About this Product</a></p> -->
 								<!-- Product Action -->
 								<div class="product-action clearfix">
-									<div class="product-form__item--quantity">
+									<!-- <div class="product-form__item--quantity">
 										<div class="wrapQtyBtn">
 											<div class="qtyField">
 												<a class="qtyBtn minus" href="javascript:void(0);"><i class="fa anm anm-minus-r" aria-hidden="true"></i></a>
@@ -138,16 +138,16 @@
 												<a class="qtyBtn plus" href="javascript:void(0);"><i class="fa anm anm-plus-r" aria-hidden="true"></i></a>
 											</div>
 										</div>
-									</div>  
+									</div>   -->
 									<div class="product-form__item--submit">
 										<form class="variants add" action="#"method="post">
 											<a href="javascript:void(0);" class="addtocart" ><button data-product="product-<%= itemProduct.id %>" class="btn addtocart"  type="button" tabindex="0">THÊM GIỎ HÀNG</button></a>
 											
 										</form>
 									</div>
-									<div class="shopify-payment-button" data-shopify="payment-button">
+									<!-- <div class="shopify-payment-button" data-shopify="payment-button">
 										<button type="button" class="shopify-payment-button__button shopify-payment-button__button--unbranded">MUA NGAY</button>
-									</div>
+									</div> -->
 								</div>
 								<!-- End Product Action -->
 							</form>
