--- a/app/vviews/ecommerce/elements/ourBlog.ejs
+++ b/app/vviews/ecommerce/elements/ourBlog.ejs
@@ -22,7 +22,7 @@
                                         <h2 class="h3 article__title">
                                           <a href="/chi-tiet-bai-viet/<%= items.id %>"><%= items.title %> </a>
                                         </h2>
-                                        <span class="article__date">May 02, 2017</span>
+                                        <!-- <span class="article__date">May 02, 2017</span> -->
                                         <div class="rte article__grid-excerpt">
                                             <%= items.shortDes %>
                                         </div>
