--- a/app/vviews/ecommerce/pages/blogArticle/index.ejs
+++ b/app/vviews/ecommerce/pages/blogArticle/index.ejs
@@ -127,7 +127,7 @@ const folderProductUpload='uploads/products/';
                                               </a>
                                           </div>
                                           <div class="details"> <a class="grid-view-item__title" href="/chi-tiet-bai-viet/<%= items.id %>"><%= items.title %> </a>
-                                            <div class="grid-view-item__meta"><span class="article__date"> <time datetime="2017-05-02T14:33:00Z">May 02, 2017</time></span></div>
+                                            <!-- <div class="grid-view-item__meta"><span class="article__date"> <time datetime="2017-05-02T14:33:00Z">May 02, 2017</time></span></div> -->
                                           </div>
                                         </div>
                                       </div>            
