--- a/app/vviews/ecommerce/pages/cart/index.ejs
+++ b/app/vviews/ecommerce/pages/cart/index.ejs
@@ -82,7 +82,7 @@
                	</div>
                 
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 cart__footer">
-                    <div class="solid-border">
+                    <div class="solid-border sumPrice">
                         <h5>Mã Giảm Giá</h5>
                         <form action="#" method="post">
                             <div class="form-group">
@@ -115,6 +115,7 @@
                            I agree with the terms and conditions</label>
                       </p> -->
                       <br>
+                      <button onclick="checkOut();" type="button" class="btn btn-secondary btn--small submitCodeCoupon checkout" disabled>Thanh Toán</button>
                       <!-- <td colspan="3" class="text-right"><button onClick="checkOut();"  class="btn btn--small-wide">Thanh Toán</button></td> -->
                       <input onclick="checkOut();" type="button" class="btn btn-secondary btn--small submitCodeCoupon" value="Thanh Toán">
                       <!-- <button src="/checkout" src="/frontend/assets/images/payment-img.jpg" type="submit" name="checkout" id="cartCheckout" class="btn btn--small-wide checkout" value="Thanh Toán"> -->
