--- a/app/vviews/ecommerce/pages/product/index.ejs
+++ b/app/vviews/ecommerce/pages/product/index.ejs
@@ -279,7 +279,7 @@
 											</fieldset>
 										</form>
 									</div> -->
-									<div class="spr-reviews">
+									<!-- <div class="spr-reviews">
 										<div class="spr-review">
 											<div class="spr-review-header">
 												<span class="product-review spr-starratings spr-review-header-starratings"><span class="reviewLink"><i class="fa fa-star"></i><i class="font-13 fa fa-star"></i><i class="font-13 fa fa-star"></i><i class="font-13 fa fa-star"></i><i class="font-13 fa fa-star"></i></span></span>
@@ -314,7 +314,7 @@
 											<br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 										  </div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 								</div>
 						</div>
