--- a/app/vviews/admin/html/sidebar.ejs
+++ b/app/vviews/admin/html/sidebar.ejs
@@ -70,7 +70,7 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="/uploads/users/<%= userInfo.avatar %>" class="img-circle elevation-2" alt="User Image">
+                <img src="/uploads/users/<%= userInfo.avatar%>"onerror="this.onerror=null; this.src='https://vyshnevyi-partners.com/wp-content/uploads/2016/12/no-avatar.png'"/>
             </div>
             <div class="info">
                 <a href="/adminCCC/dashboard" class="d-block">Danh</a>
