--- a/app/vviews/ecommerce/pages/listBlog/index.ejs
+++ b/app/vviews/ecommerce/pages/listBlog/index.ejs
@@ -29,7 +29,7 @@ const folderProductUpload='uploads/products/';
                               <h2 class="h3"><a href="/chi-tiet-bai-viet/<%= items.id %>"><%= items.title %> </a></h2>
                               <ul class="publish-detail">                      
                                   <li><i class="anm anm-user-al" aria-hidden="true"></i>  User</li>
-                                  <li><i class="icon anm anm-clock-r"></i> <time datetime="2017-05-02">May 02, 2017</time></li>
+                                  <!-- <li><i class="icon anm anm-clock-r"></i> <time datetime="2017-05-02">May 02, 2017</time></li> -->
                               </ul>
                               <div class="rte"> 
                                 <%= items.shortDes %> 
@@ -71,7 +71,7 @@ const folderProductUpload='uploads/products/';
                                               </a>
                                           </div>
                                           <div class="details"> <a class="grid-view-item__title" href="/chi-tiet-bai-viet/<%= items.id %>"><%= items.title %> </a>
-                                            <div class="grid-view-item__meta"><span class="article__date"> <time datetime="2017-05-02T14:33:00Z">May 02, 2017</time></span></div>
+                                            <!-- <div class="grid-view-item__meta"><span class="article__date"> <time datetime="2017-05-02T14:33:00Z">May 02, 2017</time></span></div> -->
                                           </div>
                                         </div>
                                       </div>            
