--- a/app/vviews/ecommerce/pages/search/index.ejs
+++ b/app/vviews/ecommerce/pages/search/index.ejs
@@ -332,14 +332,14 @@
                     </div>
                 </div>
                 <hr class="clear">
-                <div class="pagination">
+                <!-- <div class="pagination">
                     <%# paginationHelper(paginationObj,'listProduct') %>
                   <ul>
                     <li class="active"><a href="#">1</a></li>
                     <li><a href="#">2</a></li>
                     <li class="next"><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i></a></li>
                   </ul>
-                </div>
+                </div> -->
             </div>
             <!--End Main Content-->
         </div>
