--- a/app/vviews/ecommerce/pages/user/profile.ejs
+++ b/app/vviews/ecommerce/pages/user/profile.ejs
@@ -52,7 +52,7 @@
                   <h6 class="mb-0">Email</h6>
                 </div>
                 <div class="col-sm-9 text-secondary">
-                  <input type="text" name="email" class="form-control" value="<%= userInfo.email%>">
+                  <input type="text" name="email" class="form-control" disabled value="<%= userInfo.email%>">
                 </div>
               </div>
               <div class="row mb-3">
